
 * data/pcsx.glade2: Adjusted Memcard dialog.
 * po/pt_BR.po, po/zh_CN.po, po/zh_TW.po, po/pcsx.pot: Updated.
 * gui/Cheat.c: Fixed memory leaks.
 * plugins/dfinput/cfg-gtk2.c: Likewise.
 * gui/Gtk2Gui.c: Moved memcard dialog stuff into MemcardDlg.c.
 * gui/MemcardDlg.c: Added.
 * gui/MemcardDlg.h: Likewise.
 * gui/Makefile.am: Added MemcardDlg.c.

November 27, 2009 Wei Mingzhi <weimingzhi@gmail.com>

 * plugins/dfcdrom/cdrcfg-0.1df/main.c: Rewritten the configuration utility
   with libglade.
 * plugins/dfcdrom/Makefile.am: Fixed compiling.
 * plugins/dfcdrom/cdrcfg-0.1df/dfcdrom.glade2: Added.
 * plugins/dfcdrom/cdrcfg-0.1df/callbacks.c: Removed Glade-generated code.
 * plugins/dfcdrom/cdrcfg-0.1df/callbacks.h: Likewise.
 * plugins/dfcdrom/cdrcfg-0.1df/support.c: Likewise.
 * plugins/dfcdrom/cdrcfg-0.1df/support.h: Likewise.
 * plugins/dfcdrom/cdrcfg-0.1df/interface.c: Likewise.
 * plugins/dfcdrom/cdrcfg-0.1df/interface.h: Likewise.
 * plugins/dfcdrom/cdrcfg-0.1df/cfgCdr.glade: Likewise.
 * plugins/dfcdrom/cdrcfg-0.1df/cfg-gtk2: Likewise.
 * plugins/dfcdrom/cdr-linux.c: Added selection of spin-down time.
   Don't return NULL when CDRgetBuffer() is called more than once without
   another CDRreadTrack() call in threaded mode, which solves the problem
   with Final Fantasy 6 (maybe other games too).
 * plugins/dfcdrom/cfg.c: Likewise.
 * plugins/dfcdrom/cfg.h: Likewise.
 * po/update-pot.sh: Include files from plugins/dfcdrom/cdrcfg-0.1df.
 * po/pcsx.pot, po/zh_CN.po, po/zh_TW.po, po/pt_BR.po: Updated.
 * plugins/dfcdrom/cdr.h: Moved global variables into cdr-linux.c.
 * plugins/dfxvideo/draw.c: Removed the screensaver disabling code.
 * plugins/dfxvideo/Makefile.am: Don't link against Xtst.
 * gui/LnxMain.c: Disable screensaver in the main emu, so that it will be
   effective in all of the plugins.
 * gui/Makefile.am: Added -lXext -lXtst.

November 26, 2009 Wei Mingzhi <weimingzhi@gmail.com>
